--- a/Day1/Python_basics_Lecture.ipynb
+++ b/Day1/Python_basics_Lecture.ipynb
@@ -19,10 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6704253f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is greater than 3\n"
+     ]
+    }
+   ],
    "source": [
     "# Example: Indentation and block structure in Python\n",
     "x = 5\n",
@@ -45,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "34e9840c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Examples of different data types in Python\n",
     "name = \"Alice\"    # String\n",
@@ -77,10 +96,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e138777",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "7\n",
+      "30\n",
+      "3.3333333333333335\n",
+      "3\n",
+      "1\n",
+      "1000\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Arithmetic Operations\n",
     "a = 10\n",
@@ -118,10 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8892572d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "26\n"
+     ]
+    }
+   ],
    "source": [
     "# Operator precedence\n",
     "result = 10 + 3 * 2  # Multiplication is evaluated first: result = 16\n",
@@ -156,10 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5812f442",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are an adult.\n"
+     ]
+    }
+   ],
    "source": [
     "age = 20\n",
     "\n",
@@ -197,10 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ecb0222d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like apple\n",
+      "I like banana\n",
+      "I like cherry\n"
+     ]
+    }
+   ],
    "source": [
     "# A `for` loop is used when we want to iterate over a sequence (list, tuple, dictionary, etc.).\n",
     "# Looping Through a List\n",
@@ -212,10 +276,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "20398a1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1\n",
+      "Iteration 2\n",
+      "Iteration 3\n",
+      "Iteration 4\n",
+      "Iteration 5\n"
+     ]
+    }
+   ],
    "source": [
     "# Looping Over a Range of Numbers\n",
     "for i in range(1, 6):  \n",
@@ -224,10 +300,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d5e4c940",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# Looping Over a String\n",
     "for char in \"hello\":\n",
@@ -320,10 +408,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "25df0efb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "for num in range(1, 6):\n",
     "    if num % 2 == 0:\n",
@@ -343,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5c19c243",
    "metadata": {},
    "outputs": [],
@@ -373,10 +471,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a23bcea9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Alice and I am 25 years old.\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"Alice\"\n",
     "age = 25\n",
@@ -394,10 +500,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "14db04d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Alice and I am 25 years old.\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"Alice\"\n",
     "age = 25\n",
@@ -406,10 +520,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "963ce8af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Alice, Age: 25\n"
+     ]
+    }
+   ],
    "source": [
     "# Reordering placeholders\n",
     "print(\"Name: {1}, Age: {0}\".format(age, name))"
@@ -417,10 +539,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0b49123b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Alice and I am 25 years old.\n"
+     ]
+    }
+   ],
    "source": [
     "# Using Named Placeholders\n",
     "print(\"My name is {name} and I am {age} years old.\".format(name=\"Alice\", age=25))"
@@ -437,10 +567,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7bb7ff80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Alice and I am 25 years old.\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"Alice\"\n",
     "age = 25\n",
@@ -449,10 +587,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8375b493",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of 5 and 10 is 15.\n"
+     ]
+    }
+   ],
    "source": [
     "# perform calculations\n",
     "x = 5\n",
@@ -462,10 +608,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "775614a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pi rounded to 2 decimals: 3.14\n"
+     ]
+    }
+   ],
    "source": [
     "# format Floating Point Numbers\n",
     "pi = 3.1415926535\n",
@@ -482,10 +636,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b48909e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is John, I am 30 years old, and I am 6.1 feet tall.\n",
+      "The area of the rectangle is: 15\n",
+      "8 is smaller than 10\n"
+     ]
+    }
+   ],
    "source": [
     "# Variables and data types\n",
     "name = \"John\"\n",
@@ -594,10 +758,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fa8488d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside function: x = 20\n",
+      "Inside function: y = 6\n",
+      "Outside function: x = 20\n",
+      "Outside function: y = 8\n"
+     ]
+    }
+   ],
    "source": [
     "# Example of variable scope\n",
     "x = 10  # Global variable\n",
@@ -627,10 +802,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7cddfc3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "def sum_numbers(*args):\n",
     "    return sum(args)\n",
@@ -648,10 +831,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3f3dc9ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Alice\n",
+      "age: 30\n",
+      "city: Paris\n"
+     ]
+    }
+   ],
    "source": [
     "def print_user_details(**kwargs):\n",
     "    for key, value in kwargs.items():\n",
@@ -678,10 +871,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "63ce04d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "[1, 4, 9, 16, 25]\n",
+      "[4, 4, 4, 4, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# Lambda function for addition\n",
     "add = lambda x, y: x + y\n",
@@ -1903,7 +2106,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "mery_env",
    "language": "python",
    "name": "python3"
   },
@@ -1917,7 +2120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
